--- a/SCME.WpfControlLibrary/CustomControls/SmartLabel.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/SmartLabel.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-             xmlns:Converters="clr-namespace:SCME.WpfControlLibrary.IValueConverters"
-             xmlns:MahappsControls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:converters="clr-namespace:SCME.WpfControlLibrary.IValueConverters"
+             xmlns:mahappsControls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -17,8 +17,8 @@
     </UserControl.Resources>
     <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}}">
         <Label Content="{Binding Value}" Visibility="{Binding IsEnabled, Converter={StaticResource B2VI}}" HorizontalAlignment="Right" />
-        <local:NumericUpDown x:Name="asd" Value="{Binding Value}" 
-                                       Minimum="{Binding Minimum}" Maximum="{Binding Maximum}" Interval="{Binding Interval}" 
+        <local:NumericUpDown Value="{Binding Value}" 
+                                       Minimum="{Binding Minimum}" Maximum="{Binding Maximum}" Interval="{Binding Interval}" MouseDoubleClick="Control_OnMouseDoubleClick"
                                        Visibility="{Binding IsEnabled, Converter={StaticResource B2V}}"  />
     </Grid>
 </UserControl>
