--- a/SCME.WpfControlLibrary/DataTemplates/ProfileHierarchicalDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/ProfileHierarchicalDataTemplate.xaml
@@ -13,8 +13,8 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding Name}"/>
-        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Version}"  Margin="{x:Static VM:ResourceBinding.MarginLeft05}"/>
-            <TextBlock Grid.Column="2" Grid.Row="0" Text="{Binding Timestamp, StringFormat=hh:mm:ss dd-MM-yyyy}" TextWrapping="Wrap"  Margin="{x:Static VM:ResourceBinding.MarginLeft05}" HorizontalAlignment="Right"/>
+        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Version}"  Margin="{DynamicResource SCME.MarginLeftTreeViewItemDataProfile}"/>
+            <TextBlock Grid.Column="2" Grid.Row="0" Text="{Binding Timestamp, StringFormat=hh:mm:ss dd-MM-yyyy}" TextWrapping="Wrap"  Margin="{DynamicResource SCME.MarginLeftTreeViewItemDataProfile}" HorizontalAlignment="Right"/>
 
     </Grid>
 </UserControl>
