--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
@@ -1,78 +1,87 @@
 ﻿<UserControl x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.BVTDataTemplate"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             mc:Ignorable="d" 
+             xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
+             xmlns:bvt="clr-namespace:SCME.Types.BVT;assembly=SCME.Types"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=bvt:TestParameters}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid  >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="1*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TestType}" /> 
-        <Label Grid.Column="1" Grid.Row="0" Content="{Binding TestType, Converter={StaticResource BT2S},  UpdateSourceTrigger=PropertyChanged}" />
-        <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}" />
-        <Label Grid.Column="3" Grid.Row="0" Content="{Binding CurrentLimit }" />
-
-        <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-        <Label Grid.Column="1" Grid.Row="1" Content="{Binding VoltageLimitD }" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-        <Label Grid.Column="2" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-        <Label Grid.Column="3" Grid.Row="1" Content="{Binding VoltageLimitR}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-
-        <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.PlateTime_ms}" />
-        <Label Grid.Column="1" Grid.Row="2" Content="{Binding PlateTime}" />
-        <Label Grid.Column="2" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}" />
-        <Label Grid.Column="3" Grid.Row="2" Content="{Binding RampUpVoltage}" />
-
-        <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.StartVoltage_V}" />
-        <Label Grid.Column="1" Grid.Row="3" Content="{Binding StartVoltage}" />
-        <Label Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}" />
-        <Label Grid.Column="3" Grid.Row="3" Content="{Binding VoltageFrequency}" />
-
-        <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.FreqRate_Hz}" />
-        <Label Grid.Column="1" Grid.Row="4" Content="{Binding FrequencyDivisor, Converter={StaticResource FD2F}}" />
-        <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.Mode}" />
-        <Label Grid.Column="3" Grid.Row="4" Content="{Binding MeasurementMode}" />
-
-        <Grid Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="4" Visibility="{Binding MeasurementMode, ConverterParameter=1, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+    <StackPanel Grid.IsSharedSizeScope="True" HorizontalAlignment="Stretch">
+        <Grid Column="0" Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
                 <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.MinVdrm_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <Label Grid.Column="1" Grid.Row="0" Content="{Binding VDRM}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.MinVrrm_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <Label Grid.Column="3" Grid.Row="0" Content="{Binding VRRM}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+
+            <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.TestType}" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="0" Value="{Binding TestType, Converter={StaticResource BT2S}}" />
+            <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.CurrentLimit_mA}" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="0" Value="{Binding CurrentLimit }" />
+
+            <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}}" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="1" Value="{Binding VoltageLimitD }" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}}" />
+            <Label Grid.Column="2" Grid.Row="1" Content="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}}" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="1" Value="{Binding VoltageLimitR}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}}" />
+
+            <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.PlateTime_ms}" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="2" Value="{Binding PlateTime}" />
+            <Label Grid.Column="2" Grid.Row="2" Content="{x:Static res:Resources.Rampup_Vms}" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="2" Value="{Binding RampUpVoltage}" />
+
+            <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.StartVoltage_V}" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="3" Value="{Binding StartVoltage}" />
+            <Label Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.Frequency_Hz}" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="3" Value="{Binding VoltageFrequency}" />
+
+            <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.FreqRate_Hz}" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="4" Value="{Binding FrequencyDivisor, Converter={StaticResource FD2F}}" />
+            <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.Mode}" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="4" Value="{Binding MeasurementMode}" />
         </Grid>
 
-        <Grid Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="4" Visibility="{Binding MeasurementMode, ConverterParameter=0, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
+        <Grid Column="0" Row="1" Visibility="{Binding MeasurementMode, ConverterParameter=1, Converter={StaticResource MM2V}}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
                 <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.MaxIdrm_mA}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <Label Grid.Column="1" Grid.Row="0" Content="{Binding IDRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.MaxIrrm_mA}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-            <Label Grid.Column="3" Grid.Row="0" Content="{Binding IRRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.MinVdrm_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}}" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="0" Value="{Binding VDRM}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}}" />
+            <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.MinVrrm_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}}" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="0" Value="{Binding VRRM}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}}" />
         </Grid>
 
-    </Grid>
+        <Grid Column="0" Row="2" Visibility="{Binding MeasurementMode, ConverterParameter=0, Converter={StaticResource MM2V}}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.MaxIdrm_mA}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}}" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="0" Value="{Binding IDRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}}" />
+            <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.MaxIrrm_mA}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}}" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="0" Value="{Binding IRRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}}" />
+        </Grid>
+
+    </StackPanel>
 </UserControl>
