--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             xmlns:CustomControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-             mc:Ignorable="d" 
+             xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
+             xmlns:gate="clr-namespace:SCME.Types.Gate;assembly=SCME.Types"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=gate:TestParameters}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -22,26 +23,26 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <CustomControls:CheckBox Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" IsChecked="{Binding IsCurrentEnabled}" Content="{x:Static res:Resources.PureVgt}"/>
+        <customControls:CheckBox Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" IsChecked="{Binding IsCurrentEnabled}" Content="{x:Static res:Resources.PureVgt}"/>
         <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.HoldingCurrent}" />
-        <CustomControls:CheckBox Grid.Column="3" Grid.Row="0" IsChecked="{Binding IsIhEnabled}"/>
+        <customControls:CheckBox Grid.Column="3" Grid.Row="0" IsChecked="{Binding IsIhEnabled}"/>
 
         <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.HoldingStrikeCurrent}" />
-        <CustomControls:CheckBox Grid.Column="1" Grid.Row="1" IsChecked="{Binding IsIhStrikeCurrentEnabled}" />
+        <customControls:CheckBox Grid.Column="1" Grid.Row="1" IsChecked="{Binding IsIhStrikeCurrentEnabled}" />
         <Label Grid.Column="2" Grid.Row="1"  Content="{x:Static res:Resources.LatchingCurrent}" />
-        <CustomControls:CheckBox Grid.Column="4" Grid.Row="1" IsChecked="{Binding IsIlEnabled}"  />
+        <customControls:CheckBox Grid.Column="3" Grid.Row="1" IsChecked="{Binding IsIlEnabled}"  />
 
         <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.MaxResistance_Ohm}" />
-        <CustomControls:SmartLabel Grid.Column="1" Grid.Row="2" Value="{Binding Resistance}" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="2" Value="{Binding Resistance}" />
 
         <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.MaxIgt_mA}" />
-        <CustomControls:SmartLabel Grid.Column="1" Grid.Row="3" Value="{Binding IGT}"/>
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="3" Value="{Binding IGT}"/>
         <Label Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.MaxVgt_V}" />
-        <CustomControls:SmartLabel Grid.Column="3" Grid.Row="3" Value="{Binding VGT }" />
+        <customControls:SmartLabel Grid.Column="3" Grid.Row="3" Value="{Binding VGT }" />
 
         <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.MaxIh_mA}" />
-        <CustomControls:SmartLabel Grid.Column="1" Grid.Row="4" Value="{Binding IH }" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="4" Value="{Binding IH }" />
         <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.MaxIl_mA}" />
-        <CustomControls:SmartLabel Grid.Column="3" Grid.Row="4" Value="{Binding IL}" />
+        <customControls:SmartLabel Grid.Column="3" Grid.Row="4" Value="{Binding IL}" />
     </Grid>
 </UserControl>
