--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
@@ -1,13 +1,21 @@
 ﻿<UserControl x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.VTMDataTemplate"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             mc:Ignorable="d" 
+             xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
+             xmlns:vtm="clr-namespace:SCME.Types.VTM;assembly=SCME.Types"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=vtm:TestParameters}"
              d:DesignHeight="450" d:DesignWidth="800">
-   
-    <Grid  >
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="1*" />
@@ -24,9 +32,9 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Type}" />
-        <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Content="{Binding TestType, Converter={StaticResource VT2S}, UpdateSourceTrigger=PropertyChanged}" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Value="{Binding TestType, Converter={StaticResource VT2S}}" />
 
-        <Grid Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Visibility="{Binding TestType, ConverterParameter=0, Converter={StaticResource VT2V}, UpdateSourceTrigger=PropertyChanged}">
+        <Grid Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Visibility="{Binding TestType, ConverterParameter=0, Converter={StaticResource VT2V}}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="1*" />
@@ -41,20 +49,24 @@
             </Grid.RowDefinitions>
 
             <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Current_A}" />
-            <Label Grid.Column="1" Grid.Row="0"  Content="{Binding RampCurrent}" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="0" Value="{Binding RampCurrent}" />
             <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Time_us}" />
-            <Label Grid.Column="3" Grid.Row="0"  Content="{Binding RampTime}" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="0" Value="{Binding RampTime}" />
 
-            <Label Grid.Column="0" Grid.Row="1"   Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.IsHeatEnabled}" />
-            <Path Grid.Column="1" Grid.Row="1" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Stretch="Uniform" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}" />
-            
-            <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.HeatCurrent_A}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-            <Label Grid.Column="1" Grid.Row="2"  Content="{Binding RampOpeningCurrent }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-            <Label Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.HeatTime_us}" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
-            <Label Grid.Column="4" Grid.Row="2" Content="{Binding RampOpeningTime }" Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+            <customControls:CheckBox Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" IsEnabled="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.IsHeatEnabled}"/>
+
+            <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.HeatCurrent_A}"
+                   Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+            <customControls:SmartLabel Grid.Column="1" Grid.Row="2" Value="{Binding RampOpeningCurrent }"
+                                       Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+            <Label Grid.Column="3" Grid.Row="2" Content="{x:Static res:Resources.HeatTime_us}"
+                   Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
+            <customControls:SmartLabel Grid.Column="3" Grid.Row="2" Value="{Binding RampOpeningTime }"
+                                       Visibility="{Binding IsRampOpeningEnabled, Converter={StaticResource B2V} }" />
         </Grid>
 
-        <Grid Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="4" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource VT2V}, UpdateSourceTrigger=PropertyChanged}">
+        <Grid Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="4"
+              Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource VT2V}}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
@@ -64,13 +76,14 @@
                 </Grid.ColumnDefinitions>
 
                 <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Current_A}" />
-                <Label Grid.Column="1" Grid.Row="0" Content="{Binding SinusCurrent}" />
+                <customControls:SmartLabel Grid.Column="1" Grid.Row="0" Value="{Binding SinusCurrent}" />
                 <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Time_us}" />
-                <Label Grid.Column="3" Grid.Row="0" Content="{Binding SinusTime }" />
+                <customControls:SmartLabel Grid.Column="3" Grid.Row="0" Value="{Binding SinusTime }" />
             </Grid>
         </Grid>
 
-        <Grid Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource VT2V}, UpdateSourceTrigger=PropertyChanged}">
+        <Grid Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4"
+              Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource VT2V}}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
@@ -83,27 +96,26 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Current_A}" />
-                <Label Grid.Column="1" Grid.Row="0" Content="{Binding CurveCurrent }" />
+                <customControls:SmartLabel Grid.Column="1" Grid.Row="0" Value="{Binding CurveCurrent }" />
                 <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Time_us}" />
-                <Label Grid.Column="3" Grid.Row="0" Content="{Binding CurveTime }" />
+                <customControls:SmartLabel Grid.Column="3" Grid.Row="0" Value="{Binding CurveTime }" />
 
                 <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.CurveFactor}" />
-                <Label Grid.Column="1" Grid.Row="1" Content="{Binding CurveFactor }" />
+                <customControls:SmartLabel Grid.Column="1" Grid.Row="1" Value="{Binding CurveFactor }" />
                 <Label Grid.Column="2" Grid.Row="1" Content="{x:Static res:Resources.AdditionalTime_us}" />
-                <Label Grid.Column="3" Grid.Row="1" Content="{Binding CurveAddTime }" />
+                <customControls:SmartLabel Grid.Column="3" Grid.Row="1" Value="{Binding CurveAddTime }" />
             </Grid>
 
         </Grid>
 
-        <Label Grid.Column="0" Grid.Row="4"  Visibility="{Binding UseFullScale, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.UseFullScale}" />
-        <Path Grid.Column="1" Grid.Row="4" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Visibility="{Binding UseFullScale, Converter={StaticResource B2V}}" Stretch="Uniform"    />
-        <Label Grid.Column="2" Grid.Row="4"  Visibility="{Binding UseLsqMethod, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.UseLsqMethod}" />
-        <Path Grid.Column="3" Grid.Row="4" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Width="60" Visibility="{Binding UseLsqMethod, Converter={StaticResource B2V}}" Stretch="Uniform"    />
-
+        <customControls:CheckBox Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" IsEnabled="{Binding UseFullScale, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.UseFullScale}"/>
+        
+        <customControls:CheckBox Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" IsEnabled="{Binding UseLsqMethod, Converter={StaticResource B2V}}" Content="{x:Static res:Resources.UseLsqMethod}"/>
+        
         <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.Count}" />
-        <Label Grid.Column="1" Grid.Row="5" Content="{Binding Count }" />
-        <Label Grid.Column="2" Grid.Row="5" Content="{x:Static res:Resources.MaxVtm_V}"/>
-        <Label Grid.Column="3" Grid.Row="5" Content="{Binding VTM }" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="5" Value="{Binding Count }" />
+        <Label Grid.Column="2" Grid.Row="5" Content="{x:Static res:Resources.MaxVtm_V}" />
+        <customControls:SmartLabel Grid.Column="3" Grid.Row="5" Value="{Binding VTM }" />
 
     </Grid>
 </UserControl>
