--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/dVdtDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/dVdtDataTemplate.xaml
@@ -1,41 +1,49 @@
 ﻿<UserControl x:Class="SCME.WpfControlLibrary.DataTemplates.TestParameters.dVdtDataTemplate"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:res="clr-namespace:SCME.WpfControlLibrary.Properties"
-             mc:Ignorable="d" >
+             xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
+             xmlns:dVdt="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=dVdt:TestParameters}">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+    <Grid Visibility="Visible">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-    <Grid Visibility="Visible" >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="1*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+        <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Mode}" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="0" Value="{Binding Mode, Converter={StaticResource DT2S}}" />
 
-                    <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Mode}" />
-                    <Label Grid.Column="1" Grid.Row="0" Content="{Binding Mode, Converter={StaticResource DT2S},  UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.DvDtVoltage}" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="1" Value="{Binding Voltage }" />
 
-                    <Label Grid.Column="0" Grid.Row="1"  Content="{x:Static res:Resources.DvDtVoltage}" />
-                    <Label Grid.Column="1" Grid.Row="1"  Content="{Binding Voltage }" />
+        <Label Grid.Column="0" Grid.Row="2" Visibility="{Binding Mode, Converter={StaticResource DT2V}}" Content="{x:Static res:Resources.DvdtVoltageRate}" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="2" Visibility="{Binding Mode, Converter={StaticResource DT2V}}" Value="{Binding VoltageRate }" />
 
-                    <Label Grid.Column="0" Grid.Row="2"  Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="{x:Static res:Resources.DvdtVoltageRate}" />
-                    <Label Grid.Column="1" Grid.Row="2" Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="{Binding VoltageRate }" />
+        <Label Grid.Column="0" Grid.Row="3" Visibility="{Binding Mode, Converter={StaticResource DT2V}}" Content="{x:Static res:Resources.DvdtConfirmationCount}" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="3" Visibility="{Binding Mode, Converter={StaticResource DT2V}}" Value="{Binding ConfirmationCount }" />
 
-                    <Label Grid.Column="0" Grid.Row="3"  Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="{x:Static res:Resources.DvdtConfirmationCount}" />
-                    <Label Grid.Column="1" Grid.Row="3" Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="{Binding ConfirmationCount }" />
+        <Label Grid.Column="0" Grid.Row="4" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Content="{x:Static res:Resources.DvdtVoltageRateOffSet}" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="4" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Value="{Binding VoltageRateOffSet }" />
 
-                    <Label Grid.Column="0" Grid.Row="4" Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="{x:Static res:Resources.DvdtVoltageRateOffSet}" />
-                    <Label Grid.Column="1" Grid.Row="4" Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="{Binding VoltageRateOffSet }" />
-
-                    <Label Grid.Column="0" Grid.Row="5" Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="{x:Static res:Resources.DvdtVoltageRateLimit}" />
-                    <Label Grid.Column="1" Grid.Row="5" Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="{Binding VoltageRateLimit }" />
-                </Grid>
+        <Label Grid.Column="0" Grid.Row="5" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Content="{x:Static res:Resources.DvdtVoltageRateLimit}" />
+        <customControls:SmartLabel Grid.Column="1" Grid.Row="5" Visibility="{Binding Mode, Converter={StaticResource DT2VB}}" Value="{Binding VoltageRateLimit }" />
+    </Grid>
 </UserControl>
