--- a/SCME.WpfControlLibrary/Resources/Common.xaml
+++ b/SCME.WpfControlLibrary/Resources/Common.xaml
@@ -1,14 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converters="clr-namespace:SCME.WpfControlLibrary.IValueConverters"
-                    xmlns:CustomControl="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-                    xmlns:app="profile"
-                    xmlns:System="clr-namespace:System;assembly=mscorlib"
+                    xmlns:customControl="clr-namespace:SCME.WpfControlLibrary.CustomControls"
                     xmlns:vm="clr-namespace:SCME.WpfControlLibrary.ViewModels"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+                    xmlns:System="clr-namespace:System;assembly=mscorlib"
                     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                    xmlns:converters="clr-namespace:SCME.WpfControlLibrary.IValueConverters"
+                    xmlns:app="profile"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:local="clr-namespace:SCME.WpfControlLibrary"
-                    xmlns:sw ="System.Windows.Thickness;assembly=PresentationFramework"
+                    xmlns:sw="System.Windows.Thickness;assembly=PresentationFramework"
                     xmlns:bvt="clr-namespace:SCME.Types.BVT;assembly=SCME.Types"
                     xmlns:vtm="clr-namespace:SCME.Types.VTM;assembly=SCME.Types"
                     xmlns:commutation="clr-namespace:SCME.Types.Commutation;assembly=SCME.Types"
@@ -16,81 +17,65 @@
                     xmlns:profiles="clr-namespace:SCME.Types.BaseTestParams;assembly=SCME.Types"
                     xmlns:dvdt="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
                     xmlns:qrrtq="clr-namespace:SCME.Types.QrrTq;assembly=SCME.Types"
-                    xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+                    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
                     xmlns:mahappsControls="http://metro.mahapps.com/winfx/xaml/controls"
-                    xmlns:MahappsConverters="clr-namespace:MahApps.Metro.Converters;assembly=MahApps.Metro"
-                    xmlns:DataTemplatesTestParameters="clr-namespace:SCME.WpfControlLibrary.DataTemplates.TestParameters"
-                    >
-    
+                    xmlns:mahappsConverters="clr-namespace:MahApps.Metro.Converters;assembly=MahApps.Metro"
+                    xmlns:dataTemplatesTestParameters="clr-namespace:SCME.WpfControlLibrary.DataTemplates.TestParameters">
     <ResourceDictionary.MergedDictionaries>
-        <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Shared.xaml" />
-
+        
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Styles/RadioButton.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ValueConvertersDictionary.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ObjectDataProvider.xaml" />
-
-   
     </ResourceDictionary.MergedDictionaries>
 
-    <MahappsConverters:ThicknessBindingConverter x:Key="ThicknessBindingConverter" />
-    
     <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
-        <Setter Property="FontSize" Value="{Binding Source={x:Static vm:ResourceBinding.FontSize}}"/>
+        <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
     </Style>
 
     <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
-        <Setter Property="FontSize" Value="{Binding Source={x:Static vm:ResourceBinding.FontSize}}"/>
+        <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
     </Style>
 
     <Style TargetType="TextBlock">
-        <Setter Property="FontSize" Value="{Binding Source={x:Static vm:ResourceBinding.FontSize}}"/>
+        <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
     </Style>
 
-    <Style TargetType="CustomControl:CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
-        <Setter Property="FontSize" Value="{Binding Source={x:Static vm:ResourceBinding.FontSize}}"/>
+    <Style TargetType="customControl:CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
+        <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
     </Style>
+    
+    
 
-    <Style  TargetType="Button" BasedOn="{StaticResource AccentedSquareButtonStyle}">
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+    <Style TargetType="Button" BasedOn="{StaticResource AccentedSquareButtonStyle}">
+        <Setter Property="FontSize" Value="{DynamicResource BaseFontSize}" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
 
     <Style x:Key="ButtonWithIcon" TargetType="Button" BasedOn="{StaticResource AccentedSquareButtonStyle}">
-        <Setter Property="Height" Value="{Binding Source={x:Static vm:ResourceBinding.SizeButtonWithIcon}}"/>
-        <Setter Property="Width" Value="{Binding Source={x:Static vm:ResourceBinding.SizeButtonWithIcon}}"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Height" Value="{DynamicResource SCME.SizeButtonWithIcon}" />
+        <Setter Property="Width" Value="{DynamicResource SCME.SizeButtonWithIcon}" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
 
-    <Style TargetType="CustomControl:NumericUpDown" BasedOn="{StaticResource {x:Type mahappsControls:NumericUpDown}}">
-        <Setter Property="FontSize" Value="{Binding Source={x:Static vm:ResourceBinding.FontSize}}"/>
+    <Style TargetType="customControl:NumericUpDown">
+        <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
     </Style>
 
-    <Style  TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
-        <!--<Setter Property="Height" Value="{Binding Source={x:Static vm:ResourceBinding.HeightButton}}"/>-->
-        <Setter Property="FontSize" Value="{Binding Source={x:Static vm:ResourceBinding.FontSize}}"/>
+    <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
+        <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
     </Style>
 
-    <Style  TargetType="ScrollBar" >
-        <Setter Property="Width" Value="{Binding Source={x:Static vm:ResourceBinding.ScrollBarWidth}}"/>
+    <Style TargetType="ScrollBar">
+        <Setter Property="Width" Value="{DynamicResource SCME.ScrollBarWidth}" />
     </Style>
 
-    <Style  TargetType="iconPacks:PackIconMaterial" BasedOn="{StaticResource {x:Type iconPacks:PackIconMaterial}}">
-        <Setter Property="Height" Value="auto"/>
-        <Setter Property="Width" Value="auto"/>
+    <Style TargetType="iconPacks:PackIconMaterial" BasedOn="{StaticResource {x:Type iconPacks:PackIconMaterial}}">
+        <Setter Property="Height" Value="auto" />
+        <Setter Property="Width" Value="auto" />
     </Style>
 
-
-
-    
-   
-
-
-
-    
-   
 
 </ResourceDictionary>
